# Captionovo

./: .gitignore  AGENTS.md  README.md  captionovo_end_to_end_architecture_improvements.docx  package-lock.json  package.json
backend/: .env.example  ARCHITECTURE.md  README.md  package.json  pyproject.toml  tsconfig.json
backend/docs/: transcriber-and-billing-architecture.docx
backend/src/: index.ts
backend/src/captionovo/: __init__.py  auth.py  config.py  main.py  mappers.py  persist_transcript.py  schemas.py  storage_paths.py  supabase_client.py  worker.py
backend/src/captionovo/domain/: billing.py  processing.py
backend/src/captionovo/jobs/: queue.py  worker_factory.py
backend/src/captionovo/pipeline/: context.py  orchestrator.py
backend/src/captionovo/providers/: deepgram.py  factory.py  ffmpeg.py  stub.py
backend/src/domain/: billing.ts  processing.ts
backend/src/jobs/: queue.ts  worker.ts
backend/src/lib/: auth.ts  env.ts  exports.ts  mappers.ts  persist-transcript.ts  storage-paths.ts  supabase.ts
backend/src/pipeline/: context.ts  orchestrator.ts
backend/src/providers/: index.ts  types.ts
backend/src/routes/: billing.ts  exports.ts  profile.ts  projects.ts  transcript.ts
backend/src/services/: billing.ts  credits.ts  media-probe.ts  processing-events.ts  upload.ts
backend/src/types/: database.ts
backend/src/worker/: index.ts
backend/supabase/migrations/: 20260621120000_initial_schema.sql  20260621130000_processing_jobs_and_billing.sql  20260622100000_sprint1_p01_safety.sql
backend/tests/: test_deepgram_normalize.py
(+55 files in other folders)
